fix: Adjust logo size after cropping
This commit adjusts the logo size to 100px in `style.css` to accommodate the new cropped logo image.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
 }
 
 .logo {
-  height: 200px;
+  height: 100px;
   filter: none;
 }
 
